--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.port=5000
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test_java
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=toor
